реализовать создание поста; исправить чтение поста